--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Muni Aunty Cures</title>
-<link style="text/css" rel="stylesheet" href="/style.css"/>
+<link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
