--- a/index.html
+++ b/index.html
@@ -2,27 +2,34 @@
 <html>
 <head>
 <title>Muni Aunty Cures</title>
-<link type="text/css" rel="stylesheet" href="/style.css"/>
+<link type="text/css" rel="stylesheet" href="style.css"/>
 </head>
 <body>
 
 <div id="container">
 	<div id="header">
-	<h1>Muni Aunty's Miracle Cures</h1>
+	<h1>A Spoonful of Adrak and Lassan</h1>
+	</div>
+	<div id="logo">
+		<img src="C:/Users/Samir/Programming/Test%20site/images/Cure%20Logo.jpeg" alt="logo" width="80" height="80" />
 	</div>
 
 	<div id="content">
 
 		<div id="nav">
-		<h2>Disease area</h2>
+		<h2>Household Fruit</h2>
 		<ul>
-			<li><h3><a href="ftp://ftp.samir.sattars.com/samir.sattars.com/Cancer">Cancer</a></h3></li>
-			<li><h3><a href="ftp://ftp.samir.sattars.com/samir.sattars.com/Arthritis">Arthritis</a></h3></li>
-			<li><h3><a href="ftp://ftp.samir.sattars.com/samir.sattars.com/Burns.html">Burns</a></h3></li>
+			<li><h3><a href="file:///C:/Users/Samir/Programming/Test%20site/index.html">Home</a></h3></li>
+			<li><h3><a href="file:///C:/Users/Samir/Programming/Test%20site/Lemons.html">Lemons</a></h3></li>
+			<li><h3><a href="file:///C:/Users/Samir/Programming/Test%20site/Flour.html">Flour</a></h3></li>
 		</ul>
 		</div>
 		<div id="main">
-			<p>Are you suffering from aches, pains or any disease? No longer will you have to live your life in misery because there is a herbal cure for anything, whether its first degree burns or cancer, Muni aunty can guarantee that her cure will work</p>
+			<p>A spoonful of adrak and lassan makes the medicine redundant, the medicine redunant, the medicine redundant.</p>
+			<p>And a squeeze of lemon helps in a most delightful way.</p>
+			<p>The active ingredient of many medicines is derived from plants. They are in a sense, articifical versions of herbal medicines. So why take an articial extract when the natural ingredients are sitting right in your kitchen?!</p>
+			<p>Herbal medicines (without any proof) can cure the whole world of all known diseases such as cancer, infections, burns and lowering blood pressur.</p>
+			<p>What excuse do you have to be ill?</p> 
 		</div>
 	</div>
 	<div id="footer">
