--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<h2>Household Fruit</h2>
 		<ul>
 			<li><h3><a href="file:///C:/Users/Samir/Programming/Test%20site/index.html">Home</a></h3></li>
-			<li><h3><a href="file:///C:/Users/Samir/Programming/Test%20site/Lemons.html">Lemons</a></h3></li>
+			<li><h3><"Lemons.html">Lemons</a></h3></li>
 			<li><h3><a href="file:///C:/Users/Samir/Programming/Test%20site/Flour.html">Flour</a></h3></li>
 		</ul>
 		</div>
