--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 		<div id="nav">
 		<h2>Household Fruit</h2>
 		<ul>
-			<li><h3><a href="file:///C:/Users/Samir/Programming/Test%20site/index.html">Home</a></h3></li>
+			<li><h3><a href="index.html">Home</a></h3></li>
 			<li><h3><a href="Lemons.html">Lemons</a></h3></li>
-			<li><h3><a href="file:///C:/Users/Samir/Programming/Test%20site/Flour.html">Flour</a></h3></li>
+			<li><h3><a href="Flour.html">Flour</a></h3></li>
 		</ul>
 		</div>
 		<div id="main">
