--- a/Lemons.html
+++ b/Lemons.html
@@ -8,10 +8,10 @@
 
 <div id="container">
 	<div id="header">
-	<h1><a href="C:/Users/Samir/Programming/Test%20site/index.html">A Spoonful of Adrak and Lassan</a></h1>
+	<h1>A Spoonful of Adrak and Lassan</h1>
 	</div>
 	<div id="logo">
-		<img src="C:/Users/Samir/Programming/Test%20site/images/Cure%20Logo.jpeg" alt="logo" width="80" height="80" />
+		<img src="/images/Cure%20Logo.jpeg" alt="logo" width="80" height="80" />
 	</div>
 
 	<div id="content">
