--- a/Flour.html
+++ b/Flour.html
@@ -11,7 +11,7 @@
 	<h1>A Spoonful of Adrak and Lassan</a></h1>
 	</div>
 	<div id="logo">
-		<img src="C:/Users/Samir/Programming/Test%20site/images/Cure%20Logo.jpeg" alt="logo" width="80" height="80" />
+		<img src="/images/Cure%20Logo.jpeg" alt="logo" width="80" height="80" />
 	</div>
 
 	<div id="content">
