--- a/Flour.html
+++ b/Flour.html
@@ -8,7 +8,7 @@
 
 <div id="container">
 	<div id="header">
-	<h1>A Spoonful of Adrak and Lassan</a></h1>
+	<h1>A Spoonful of Adrak and Lassan</h1>
 	</div>
 	<div id="logo">
 		<img src="/images/Cure%20Logo.jpeg" alt="logo" width="80" height="80" />
