Adding remedy buttons
Adding remedy buttons to homepage

--- a/index.html
+++ b/index.html
@@ -30,6 +30,16 @@
 			<p>The active ingredient of many medicines is derived from plants. They are in a sense, articifical versions of herbal medicines. So why take an articial extract when the natural ingredients are sitting right in your kitchen?!</p>
 			<p>Herbal medicines (without any proof) can cure the whole world of all known diseases such as cancer, infections, burns and lowering blood pressur.</p>
 			<p>What excuse do you have to be ill?</p> 
+			<div class="remedy" style="text-align: center;"><a href="Lemons.html"><img src="Images\Lemons.jpg" alt="Lemons" width="250px">
+				<h3>Lemons</h3>
+				<p>Cures cancer, infections, lowers blood pressure and more...</p>
+			</a>
+			</div>
+			<div class="remedy" style="text-align: center;"><a href="Flour.html"><img src="Images\Flour.jpg" alt="Flour" width="250px">
+				<h3>Flour</h3>
+				<p>No more burns and blisters...</p>
+			</a>
+			</div>
 		</div>
 	</div>
 	<div id="footer">
