--- a/Flour.html
+++ b/Flour.html
@@ -26,6 +26,7 @@
 		</div>
 		<div id="main">
 			<h2>Flour</h2>
+			<div class="h-img"><img src="Images\flour.jpg" alt="Flour" width="130px"></div>
 			<h3>No more burns and blisters</h3>
 			<p>Some time ago I was cooking some corn and stuck my fork in the boiling water to see if the corn was ready. I missed and my hand went into the boiling water....!!</p>
 			<p>A friend of mine, who was a Vietnam vet, came into the house, as I was screaming, and asked me if I had some plain old wheat flour... I pulled out a bag and he stuck my hand in it. He told me to keep my hand in the flour for 10 minutes. He said, In Vietnam , there was a guy on fire and in their panic, they threw a bag of flour all over him to put the fire out...Well, it not only put the fire out, but he <b>never even had a blister!!!!</b></p>
