--- a/Lemons.html
+++ b/Lemons.html
@@ -26,7 +26,7 @@
 		</div>
 		<div id="main">
 			<h2>Lemons</h2>
-			<div class="h-img"><img src="Images\lemons.jpg" alt="Lemons" width="130px"></div>
+			<div class="h-img"><img src="Images\Lemons.jpg" alt="Lemons" width="130px"></div>
 			<h3>Cures cancer, infections, lowers blood pressure and more...</h3>
 			<p>Place the washed lemon in the freezer. Once frozen, get your grater, & shred the whole lemon (no need to peel it) and sprinkle it on your foods! On vegetables, salad, ice cream, soup, cereals, noodles, spaghetti sauce,
 			rice, sushi, fish dishes, ... the list is endless.</p>
